--- a/index.html
+++ b/index.html
@@ -45,7 +45,11 @@ Barebone ah website
 <img class="moregurahaha" src="gura-gawr-gura.gif" alt="huhunoimag">
 
 <img class="morero" src="bf90c7a3bd5ac351c261161a5c20dfc6.gif" alt="nopicture">
+
+<img class="morerore" src="png-xbox-green-symbol-logo-icon-701751694970230bvp7gefsu3-removebg-preview.png" alt="nopicture">
  
+<a id="firstlink" href="https://www.youtube.com/watch?v=xvFZjo5PgG0">This is my link</a>
+
 </div>
 
 </body>
