--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ Barebone ah website
 <!---contacting the js file--->
 <script src="src/js/main.js" defer></script>
 <!--p stand for paragraph-->
-<p>Here you can found my other social links</p>
+<p>Here you can found my other social links(see what i did there, there is only one link)</p>
 
 <!---this is how you classified  stuff like audio,image yadayadayada by classes, this means for group-->
 <div class="container1">
