--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ Barebone ah website
 <!---contacting the js file--->
 <script src="src/js/main.js" defer></script>
 <!--p stand for paragraph-->
-<p>Here you can found my other social links(see what i did there, there is only one link)</p>
+<p>Here you can found my other social links</p>
 
 <!---this is how you classified  stuff like audio,image yadayadayada by classes, this means for group-->
 <div class="container1">
@@ -49,6 +49,14 @@ Barebone ah website
 <img class="morerore" src="png-xbox-green-symbol-logo-icon-701751694970230bvp7gefsu3-removebg-preview.png" alt="nopicture">
  
 <a id="firstlink" href="https://www.youtube.com/watch?v=xvFZjo5PgG0">This is my link</a>
+
+<img class="stinky" src="gawr-gura-gura.gif" alt="nopicture">
+
+<img class="stinky2" src="gawr-gura-cute.gif" alt="nopicture">
+
+<img class="stinky3" src="1071a4e7fd67bb20bb175a3a7d23bdfe.gif" alt="nopicture">
+
+<img class="stinky4" src="KEZFZYu.gif" alt="nopicture">
 
 </div>
 
